# bm_sbc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  PLAN.md  agents.md  logging-plan.md  pcap-plan.md
.github/workflows/: ci.yml
apps/example/: app_main.cpp
apps/gateway/: app_main.cpp
apps/ipc_test/: app_main.cpp
apps/multinode/: app_main.cpp
clients/python/: requirements.txt
clients/python/bm_sbc_gateway/: __init__.py
cmake/: gen_git_sha.cmake
deploy/: bm_sbc_gateway.service  dfu_prestart.sh
deploy/logrotate.d/: bm_sbc
deploy/tmpfiles.d/: bm_sbc.conf
docs/: gateway-ipc.md  operations.md  quickstart.md  uart-gateway.md
examples/: node1.toml  node2.toml
scripts/: gateway_ipc_test.sh  gateway_loopback_test.sh  multinode_test.sh  validate.sh
src/core/: app_runner.cpp  app_runner.h  bm_config.h  bm_log.c  bm_log.h  main.cpp  pcap_file_sink.cpp  pcap_file_sink.h  runtime.cpp  runtime.h  version_info.cpp
src/net/: eth_tunnel_device.cpp  eth_tunnel_device.h  gateway_device.cpp  gateway_device.h  gateway_ipc.cpp  gateway_ipc.h  raw_eth_device.cpp  raw_eth_device.h  udp_tunnel_device.cpp  udp_tunnel_device.h  virtual_port_device.cpp  virtual_port_device.h
src/platform/linux/: platform_linux.cpp  platform_linux.h
src/transports/raw_eth/: raw_eth_transport.cpp  raw_eth_transport.h
src/transports/uart_l2/: cobs.c  cobs.h  crc32c.c  crc32c.h  frame_codec.c  frame_codec.h  uart_l2_transport.cpp  uart_l2_transport.h
src/transports/udp_tunnel/: udp_tunnel_transport.cpp  udp_tunnel_transport.h
tests/: test_frame_codec.c
